--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -122,6 +122,7 @@ LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate
 MMTAppRegionsCount=0
 MMTConfigApplied=false
+MMTSectionSuffix=_Section
 Mcu.CPN=STM32H563ZIT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
@@ -134,11 +135,12 @@ Mcu.IP13=NETXDUO
 Mcu.IP14=NVIC
 Mcu.IP15=PWR
 Mcu.IP16=RCC
-Mcu.IP17=SPI2
-Mcu.IP18=SYS
-Mcu.IP19=THREADX
+Mcu.IP17=RTC
+Mcu.IP18=SPI2
+Mcu.IP19=SYS
 Mcu.IP2=BOOTPATH
-Mcu.IP20=UART7
+Mcu.IP20=THREADX
+Mcu.IP21=UART7
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=DCACHE1
 Mcu.IP5=ETH
@@ -146,7 +148,7 @@ Mcu.IP6=FDCAN2
 Mcu.IP7=GPDMA1
 Mcu.IP8=I2C2
 Mcu.IP9=ICACHE
-Mcu.IPNb=21
+Mcu.IPNb=22
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -177,10 +179,12 @@ Mcu.Pin12=PF4
 Mcu.Pin120=VP_NETXDUO_VS_EthernetOoPhyOoInterface
 Mcu.Pin121=VP_PWR_VS_SECSignals
 Mcu.Pin122=VP_PWR_VS_LPOM
-Mcu.Pin123=VP_SYS_VS_tim1
-Mcu.Pin124=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin125=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin126=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin123=VP_RTC_VS_RTC_Activate
+Mcu.Pin124=VP_RTC_VS_RTC_Calendar
+Mcu.Pin125=VP_SYS_VS_tim1
+Mcu.Pin126=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin127=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin128=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -276,7 +280,7 @@ Mcu.Pin96=PD7
 Mcu.Pin97=PG9
 Mcu.Pin98=PG10
 Mcu.Pin99=PG11
-Mcu.PinsNb=127
+Mcu.PinsNb=129
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -469,6 +473,13 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=MUX_SEL4
 PC9.Locked=true
 PC9.Signal=GPIO_Output
+PCC.Checker=false
+PCC.Line=STM32H563/H573
+PCC.MCU=STM32H563ZITx
+PCC.PartNumber=STM32H563ZITx
+PCC.Series=STM32H5
+PCC.Temperature=25
+PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=EF_DASH_EN
 PD0.Locked=true
@@ -703,10 +714,11 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H563ZITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H5 V1.5.0
 ProjectManager.FreePins=false
+ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -751,7 +763,7 @@ RCC.I2C2Freq_Value=175000000
 RCC.I2C3Freq_Value=175000000
 RCC.I2C4Freq_Value=175000000
 RCC.I3C1Freq_Value=175000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2FRACN,PLL2M,PLL2N,PLL2P,PLL2PoutputFreq_Value,PLL2Q,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL2Source,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2CLockSelection,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2FRACN,PLL2M,PLL2N,PLL2P,PLL2PoutputFreq_Value,PLL2Q,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL2Source,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2CLockSelection,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM1Freq_Value=175000000
 RCC.LPTIM2Freq_Value=175000000
 RCC.LPTIM3Freq_Value=175000000
@@ -784,6 +796,8 @@ RCC.PLLQoutputFreq_Value=175000000
 RCC.PLLSourceVirtual=RCC_PLL1_SOURCE_HSE
 RCC.PWRFreq_Value=175000000
 RCC.RNGFreq_Value=48000000
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.SAI1Freq_Value=64000000
 RCC.SAI2Freq_Value=64000000
 RCC.SDMMC1Freq_Value=175000000
@@ -817,6 +831,9 @@ RCC.VCOInputFreq_Value=12500000
 RCC.VCOOutputFreq_Value=350000000
 RCC.VCOPLL2OutputFreq_Value=320000000
 RCC.VCOPLL3OutputFreq_Value=516000000
+RTC.AsynchPrediv=0
+RTC.IPParameters=AsynchPrediv,SynchPrediv
+RTC.SynchPrediv=32767
 SH.ADCx_INP0.0=ADC1_INP0,IN0-Single-Ended
 SH.ADCx_INP0.1=ADC2_INP0,IN0-Single-Ended
 SH.ADCx_INP0.ConfNb=2
@@ -890,6 +907,10 @@ VP_PWR_VS_LPOM.Mode=PowerOptimisation
 VP_PWR_VS_LPOM.Signal=PWR_VS_LPOM
 VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Mode=Core_Default
