--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -13,7 +13,7 @@ ADC1.ContinuousConvMode=ENABLE
 ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,MonitoredBy-11\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,NbrOfConversion,master,Rank-22\#ChannelRegularConversion,Channel-22\#ChannelRegularConversion,SamplingTime-22\#ChannelRegularConversion,OffsetNumber-22\#ChannelRegularConversion,MonitoredBy-22\#ChannelRegularConversion,Rank-23\#ChannelRegularConversion,Channel-23\#ChannelRegularConversion,SamplingTime-23\#ChannelRegularConversion,OffsetNumber-23\#ChannelRegularConversion,MonitoredBy-23\#ChannelRegularConversion,Rank-24\#ChannelRegularConversion,Channel-24\#ChannelRegularConversion,SamplingTime-24\#ChannelRegularConversion,OffsetNumber-24\#ChannelRegularConversion,MonitoredBy-24\#ChannelRegularConversion,Rank-25\#ChannelRegularConversion,Channel-25\#ChannelRegularConversion,SamplingTime-25\#ChannelRegularConversion,OffsetNumber-25\#ChannelRegularConversion,MonitoredBy-25\#ChannelRegularConversion,Rank-26\#ChannelRegularConversion,Channel-26\#ChannelRegularConversion,SamplingTime-26\#ChannelRegularConversion,OffsetNumber-26\#ChannelRegularConversion,MonitoredBy-26\#ChannelRegularConversion,Rank-27\#ChannelRegularConversion,Channel-27\#ChannelRegularConversion,SamplingTime-27\#ChannelRegularConversion,OffsetNumber-27\#ChannelRegularConversion,MonitoredBy-27\#ChannelRegularConversion,Rank-28\#ChannelRegularConversion,Channel-28\#ChannelRegularConversion,SamplingTime-28\#ChannelRegularConversion,OffsetNumber-28\#ChannelRegularConversion,MonitoredBy-28\#ChannelRegularConversion,Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,OffsetNumber-29\#ChannelRegularConversion,MonitoredBy-29\#ChannelRegularConversion,Overrun,ClockPrescaler
+ADC1.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,MonitoredBy-11\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,NbrOfConversion,Rank-22\#ChannelRegularConversion,Channel-22\#ChannelRegularConversion,SamplingTime-22\#ChannelRegularConversion,OffsetNumber-22\#ChannelRegularConversion,MonitoredBy-22\#ChannelRegularConversion,Rank-23\#ChannelRegularConversion,Channel-23\#ChannelRegularConversion,SamplingTime-23\#ChannelRegularConversion,OffsetNumber-23\#ChannelRegularConversion,MonitoredBy-23\#ChannelRegularConversion,Rank-24\#ChannelRegularConversion,Channel-24\#ChannelRegularConversion,SamplingTime-24\#ChannelRegularConversion,OffsetNumber-24\#ChannelRegularConversion,MonitoredBy-24\#ChannelRegularConversion,Rank-25\#ChannelRegularConversion,Channel-25\#ChannelRegularConversion,SamplingTime-25\#ChannelRegularConversion,OffsetNumber-25\#ChannelRegularConversion,MonitoredBy-25\#ChannelRegularConversion,Rank-26\#ChannelRegularConversion,Channel-26\#ChannelRegularConversion,SamplingTime-26\#ChannelRegularConversion,OffsetNumber-26\#ChannelRegularConversion,MonitoredBy-26\#ChannelRegularConversion,Rank-27\#ChannelRegularConversion,Channel-27\#ChannelRegularConversion,SamplingTime-27\#ChannelRegularConversion,OffsetNumber-27\#ChannelRegularConversion,MonitoredBy-27\#ChannelRegularConversion,Rank-28\#ChannelRegularConversion,Channel-28\#ChannelRegularConversion,SamplingTime-28\#ChannelRegularConversion,OffsetNumber-28\#ChannelRegularConversion,MonitoredBy-28\#ChannelRegularConversion,Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,OffsetNumber-29\#ChannelRegularConversion,MonitoredBy-29\#ChannelRegularConversion,Overrun,ClockPrescaler,master
 ADC1.MonitoredBy-11\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-22\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-23\#ChannelRegularConversion=__NULL
@@ -44,15 +44,15 @@ ADC1.Rank-26\#ChannelRegularConversion=6
 ADC1.Rank-27\#ChannelRegularConversion=7
 ADC1.Rank-28\#ChannelRegularConversion=8
 ADC1.Rank-29\#ChannelRegularConversion=9
-ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-22\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-23\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-24\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-25\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-26\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-27\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-28\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-22\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-23\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-24\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-25\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-26\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-27\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-28\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
+ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_47CYCLES_5
 ADC1.master=1
 ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_10
@@ -122,6 +122,7 @@ LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate
 MMTAppRegionsCount=0
 MMTConfigApplied=false
+MMTSectionSuffix=_Section
 Mcu.CPN=STM32H563ZIT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
@@ -469,6 +470,13 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=MUX_SEL4
 PC9.Locked=true
 PC9.Signal=GPIO_Output
+PCC.Checker=false
+PCC.Line=STM32H563/H573
+PCC.MCU=STM32H563ZITx
+PCC.PartNumber=STM32H563ZITx
+PCC.Series=STM32H5
+PCC.Temperature=25
+PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=EF_DASH_EN
 PD0.Locked=true
@@ -703,10 +711,11 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H563ZITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H5 V1.5.0
 ProjectManager.FreePins=false
+ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
